<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	android:id="@+id/create" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:orientation="vertical">
	<ScrollView android:layout_height="wrap_content" android:id="@+id/scrollView1"
		android:layout_width="fill_parent">
		<LinearLayout android:layout_width="fill_parent"
			android:paddingLeft="10dip" android:paddingRight="10dip"
			android:orientation="vertical" android:id="@+id/linearLayout1"
			android:layout_height="fill_parent">			
			<TextView android:textColor="@color/black"
				android:layout_width="wrap_content" android:text="@string/msg_existing_spinner"
				android:paddingRight="4dip" android:textStyle="bold"
				android:layout_height="wrap_content" android:textSize="14sp"
				android:id="@+id/existing_spinner_label"></TextView>
			<Spinner android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/existing_spinner"></Spinner>
			<TextView android:textColor="@color/black"
				android:layout_width="wrap_content" android:text="@string/msg_new_network"
				android:paddingRight="4dip" android:textStyle="bold"
				android:layout_height="wrap_content" android:textSize="14sp"
				android:id="@+id/new_network_label"></TextView>
			<TextView android:textColor="@color/black"
				android:layout_width="wrap_content" android:text="@string/msg_create_ssid"
				android:paddingRight="4dip" android:textStyle="bold"
				android:layout_height="wrap_content" android:textSize="14sp"
				android:id="@+id/ssid_text_view_label"></TextView>
			<EditText android:layout_width="fill_parent" android:id="@+id/ssid_text_view"
				android:text="EditText" android:layout_height="wrap_content"></EditText>
			<TextView android:textColor="@color/black"
				android:layout_width="wrap_content" android:text="@string/msg_create_security"
				android:paddingRight="4dip" android:textStyle="bold"
				android:layout_height="wrap_content" android:textSize="14sp"
				android:id="@+id/type_spinner_label"></TextView>
			<Spinner android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/type_spinner"></Spinner>
			<TextView android:textColor="@color/black"
				android:layout_width="wrap_content" android:text="@string/msg_create_secret"
				android:paddingRight="4dip" android:textStyle="bold"
				android:layout_height="wrap_content" android:textSize="14sp"
				android:id="@+id/secret_text_view_label"></TextView>
			<EditText android:password="true" android:layout_width="fill_parent"
				android:id="@+id/secret_text_view" android:text="EditText"
				android:layout_height="wrap_content"></EditText>
			<CheckBox android:id="@+id/secret_check_box"
				android:layout_width="wrap_content" android:text="@string/msg_secret_check"
				android:layout_height="wrap_content"></CheckBox>
			<CheckBox android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/encrypt_check_box" android:text="@string/msg_encrypt_text" android:checked="true"></CheckBox>
			<Button android:layout_width="fill_parent" android:text="@string/msg_create_qrcode"
				android:layout_height="wrap_content" android:id="@+id/create_button"
				android:paddingTop="8dip"></Button>
		</LinearLayout>
	</ScrollView>

</LinearLayout>
